--- a/views/blog-post.handlebars
+++ b/views/blog-post.handlebars
@@ -2,15 +2,20 @@
   <div>
     <div class="container">
       <h2 class="display-4 text-center text-secondary">{{post.title}}</h2>
-      <img src="{{post.image}}" class="img-fluid rounded mx-auto d-block head-img">
-      <p class="col-8 text-center lead">{{post.content_box}}</p>
+      <img src = "{{post.image}}" alt = "post image" class="img-fluid rounded mx-auto d-block head-img" />
+      <p> {{post.image}}
+      </p>
+       {{!-- <img src = "https://i.postimg.cc/W4tsp5yX/kbbq.png" alt = "post image" class="img-fluid rounded mx-auto d-block head-img" /> --}}
+      <script>console.log(post.image);</script>
+
+      <p class="text-center lead">{{post.content_box}}</p>
       <p class="font-weight-light text-right">Author: {{post.user.username}}</p>
       {{!-- <p class="font-weight-light text-right">Date Created:{{post.date_created}}</p> --}}
     </div>
   </div>
 </section>
 <section class="text-center">
-  <div class="card col-md-6 p-3 m-3">
+  <div class="card col-md-6 p-3 m-auto">
    
     {{!-- iterates and post every comment related to that specific post --}}
     {{#each post.comments as |comment|}}
@@ -28,7 +33,7 @@
   <input id="commentBox" class="card-header"></input>
   <div id="postId" class="card-body"></div>
   <div>
-  <button id="submitComment" class="btn btn-sm my-2 col-3 float-right" type="submit">submit comment</button>
+  <button id="submitComment" class="btn btn-sm my-2 col-3" type="submit">submit comment</button>
   </div>
   {{/if}}
 </section>
